--- a/src/app/client/src/app/modules/certificate/components/certificate-configuration/certificate-configuration.component.html
+++ b/src/app/client/src/app/modules/certificate/components/certificate-configuration/certificate-configuration.component.html
@@ -138,9 +138,9 @@
               <form [formGroup]="userPreference">
                 <div class='ui stackable grid mt-0'>
                   <div class="five wide column pt-0">
-                    <div *ngIf="configurationMode === 'add'" class="pb-24 font-weight-bold certificates-label">
+                    <div *ngIf="configurationMode === 'add'" class="font-weight-bold certificates-label">
                       {{resourceService?.frmelmnts?.cert?.lbl?.addCert}}</div>
-                    <div *ngIf="configurationMode === 'edit'" class="pb-24 font-weight-bold certificates-label">
+                    <div *ngIf="configurationMode === 'edit'" class="font-weight-bold certificates-label">
                       {{resourceService?.frmelmnts?.cert?.lbl?.editCert}}</div>
                     <!-- <div class="d-flex flex-dc">
                       <label
@@ -276,17 +276,17 @@
           <div class="sb-g-col-xs-12 sb-g-col-md-4 sb-g-col-lg-4 sb-g-col-xxxl-3">
             <div class="select-template-content sb-bg-color-white p-24 certificate-bg">
               <div class="select-template-container mb-16">
-                <div class="d-flex flex-ai-center text-left flex-jc-space-between">
-                  <label class="certificates-label">{{resourceService?.frmelmnts?.cert?.lbl?.templates}}</label>
+                <div class="d-flex flex-ai-center text-left flex-jc-space-between select-template-container-area">
+                  <label class="certificates-label mb-0 mr-16">{{resourceService?.frmelmnts?.cert?.lbl?.templates}}</label>
                   <button
-                    class="add-new-template-btn sb-btn sb-btn-normal sb-btn-outline-primary sb-left-icon-btn font-weight-bold"
+                    class="add-new-template-btn sb-btn sb-btn-normal sb-btn-outline-primary sb-left-icon-btn font-weight-bold px-16"
                     type="button" (click)="navigateToCreateTemplate()" tabindex="0">
                     <i
                       class="plus alternate outline icon"></i>{{resourceService?.frmelmnts?.cert?.btn?.createtemp}}</button>
                 </div>
-                <div class="d-flex flex-ai-center text-left flex-jc-space-between">
-                  <label class="font-weight-normal fsmall">{{resourceService?.frmelmnts?.cert?.lbl?.certNote}}</label>
-                  <button (click)="refreshData()" class="sb-btn sb-btn-normal sb-btn-outline-primary my-16"
+                <div class="d-flex flex-ai-center text-left flex-jc-space-between mb-8">
+                  <label class="font-weight-normal fsmall mb-0">{{resourceService?.frmelmnts?.cert?.lbl?.certNote}}</label>
+                  <button (click)="refreshData()" class="sb-btn sb-btn-normal sb-btn-outline-primary ml-16"
                     tabindex="0">
                     {{resourceService?.frmelmnts?.cert?.btn?.refresh}}
                   </button>
